gitops/infrastructure/frontend-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-headless
  namespace: techx-tf3
spec:
  clusterIP: None
  selector:
    opentelemetry.io/name: frontend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
