gitops/infrastructure/network-policy-opensearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-access
  namespace: techx-tf3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opensearch
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: fluent-bit
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jaeger
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-gateway
        - podSelector:
            matchLabels:
              app: aiops-engine
      ports:
        - protocol: TCP
          port: 9200
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
